[gd_scene load_steps=36 format=3 uid="uid://crviqd2ouhh1m"]

[ext_resource type="Script" uid="uid://ckb6h3jd52clt" path="res://Scenes/Player/Player.gd" id="1_a3d8c"]
[ext_resource type="Texture2D" uid="uid://bivo5thnl63mu" path="res://assets/player/player.png" id="1_uvnfx"]
[ext_resource type="PackedScene" uid="uid://35qmncpkeoor" path="res://Scenes/PlayerCam/PlayerCam.tscn" id="3_xpcdj"]
[ext_resource type="PackedScene" uid="uid://cx4ect85qx6my" path="res://Scenes/Shooter/Shooter.tscn" id="4_ude3g"]
[ext_resource type="AudioStream" uid="uid://eviw0poqok6k" path="res://assets/sound/jump.wav" id="5_jmcll"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uvnfx"]
radius = 6.0
height = 18.0

[sub_resource type="Animation" id="Animation_mtuoh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_0u5uq"]
resource_name = "fall"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_jlvik"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="Animation" id="Animation_xpcdj"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_dd0ac"]
resource_name = "jump"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_htcer"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_htcer"]
_data = {
&"RESET": SubResource("Animation_mtuoh"),
&"fall": SubResource("Animation_0u5uq"),
&"hurt": SubResource("Animation_jlvik"),
&"idle": SubResource("Animation_xpcdj"),
&"jump": SubResource("Animation_dd0ac"),
&"run": SubResource("Animation_htcer")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xpcdj"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mtuoh"]
animation = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_htcer"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dd0ac"]
advance_mode = 2
advance_expression = "velocity.y > 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jhyir"]
advance_mode = 2
advance_expression = "velocity.y < 0"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_74mp2"]
states/Start/position = Vector2(199.5, 100)
states/fall/node = SubResource("AnimationNodeAnimation_xpcdj")
states/fall/position = Vector2(618, 100.5)
states/jump/node = SubResource("AnimationNodeAnimation_mtuoh")
states/jump/position = Vector2(458.5, 99)
transitions = ["Start", "jump", SubResource("AnimationNodeStateMachineTransition_htcer"), "jump", "fall", SubResource("AnimationNodeStateMachineTransition_dd0ac"), "fall", "jump", SubResource("AnimationNodeStateMachineTransition_jhyir")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_htcer"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dd0ac"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0u5uq"]
advance_mode = 2
advance_expression = "int(velocity.x) != 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jlvik"]
advance_mode = 2
advance_expression = "int(velocity.x) == 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gk6dx"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_jhyir"]
states/idle/node = SubResource("AnimationNodeAnimation_htcer")
states/idle/position = Vector2(371.5, 100)
states/run/node = SubResource("AnimationNodeAnimation_dd0ac")
states/run/position = Vector2(598.5, 98.5)
transitions = ["idle", "run", SubResource("AnimationNodeStateMachineTransition_0u5uq"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_jlvik"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_gk6dx")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jmcll"]
animation = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oikmp"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xpcdj"]
advance_mode = 2
advance_expression = "not is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mtuoh"]
advance_mode = 2
advance_expression = "is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4wape"]
advance_mode = 2
advance_expression = "_is_hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t26db"]
advance_mode = 2
advance_expression = "_is_hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jmcll"]
advance_mode = 2
advance_expression = "!_is_hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fk5o5"]
advance_mode = 2
advance_expression = "!_is_hurt"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_jlvik"]
states/Air/node = SubResource("AnimationNodeStateMachine_74mp2")
states/Air/position = Vector2(671.83514, 100.11627)
states/Grounded/node = SubResource("AnimationNodeStateMachine_jhyir")
states/Grounded/position = Vector2(426.33514, 101)
states/Start/position = Vector2(202.5, 99.25)
states/hurt/node = SubResource("AnimationNodeAnimation_jmcll")
states/hurt/position = Vector2(434.88763, 308.27005)
transitions = ["Start", "Grounded", SubResource("AnimationNodeStateMachineTransition_oikmp"), "Grounded", "Air", SubResource("AnimationNodeStateMachineTransition_xpcdj"), "Air", "Grounded", SubResource("AnimationNodeStateMachineTransition_mtuoh"), "Grounded", "hurt", SubResource("AnimationNodeStateMachineTransition_4wape"), "Air", "hurt", SubResource("AnimationNodeStateMachineTransition_t26db"), "hurt", "Grounded", SubResource("AnimationNodeStateMachineTransition_jmcll"), "hurt", "Air", SubResource("AnimationNodeStateMachineTransition_fk5o5")]
graph_offset = Vector2(-113.95482, 3.2700472)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h54ih"]
radius = 7.0
height = 20.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_a3d8c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_uvnfx")
hframes = 19
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_uvnfx")

[node name="PlayerCam" parent="." instance=ExtResource("3_xpcdj")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_htcer")
}
autoplay = "idle"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_jlvik")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="DebugLabel" type="Label" parent="."]
visible = false
offset_left = -14.0
offset_top = -45.0
offset_right = 205.0
offset_bottom = 357.0
scale = Vector2(0.1326892, 0.10178002)
theme_override_font_sizes/font_size = 96
text = "0000
0000
0000"

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_h54ih")

[node name="Shooter" parent="." instance=ExtResource("4_ude3g")]
speed = 250.0
shoot_delay = 1.0

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jmcll")
volume_db = -10.0
pitch_scale = 0.5

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
